src/snapshots/ranet__address__test__local-5.snap
---
source: src/address.rs
expression: "super::local(\"ip6\", &Some(\"::1\".to_string()))"
---
- "::1"
