src/snapshots/ranet__address__test__local-6.snap
---
source: src/address.rs
expression: "super::local(\"ip4\", &Some(\"10.0.0.0/24\".to_string()))"
---
- 10.0.0.0/24
