src/snapshots/ranet__address__test__local-7.snap
---
source: src/address.rs
expression: "super::local(\"ip6\", &Some(\"fd00::/8\".to_string()))"
---
- "fd00::/8"
