src/snapshots/ranet__address__test__remote-4.snap
---
source: src/address.rs
expression: "super::remote(\"ip4\", &Some(\"name.invalid\".to_string()))"
---
- 0.0.0.0/0
