src/snapshots/ranet__address__test__remote-5.snap
---
source: src/address.rs
expression: "super::remote(\"ip6\", &Some(\"name.invalid\".to_string()))"
---
- "::/0"
