src/snapshots/ranet__address__test__remote-7.snap
---
source: src/address.rs
expression: "super::remote(\"ip6\", &Some(\"localhost\".to_string()))"
---
- "::/0"
- "::1"
